# prog2-2

./: Artikel.cpp  Artikel.h  ArtikelTest.cpp  ArtikelTest.h  Artikeldialog.cpp  Artikeldialog.h  CMakeLists.txt  artikel-linux  artikel-mac  credits.txt  main.cpp  makefile
